--- a/3. Statystyka opisowa.ipynb
+++ b/3. Statystyka opisowa.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cc104397-0632-4c43-96d4-57616bdad576",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e9e8a5a4-d67d-4766-8e0d-af496b2d2d50",
    "metadata": {},
    "outputs": [
@@ -355,6 +355,112 @@
    ],
    "source": [
     "odchylenie_std(dane)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9327a532-ec3c-43c5-9c7b-101b26b2ccfa",
+   "metadata": {},
+   "source": [
+    "### Wariancja i odchylenie standardowe w próbie\n",
+    "\n",
+    "W przypadku liczenia wariancji i odchylenia standardowego w próbie, mamy do czynienia z nieco innym wzorem, niż w przypadku liczenia tych metryk na populacji. \n",
+    "\n",
+    "Mianowicie od liczby obserwacji w próbie - podczas liczenia wariancji i odchylenie standardowego - odejmujemy 1. \n",
+    "\n",
+    "\n",
+    "$$s^2 = \\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}{n-1}\n",
+    "$$\n",
+    "\n",
+    "$$s = \\sqrt{\\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}{n-1}}\n",
+    "$$\n",
+    "\n",
+    "powyżej $s^2$ - wzór na wariancję w próbie, pamiętaj o innym znaku dla średniej w próbie ($\\bar{x}$)\n",
+    "\n",
+    "i $s$ - wzór na odchylenie standardowe  w próbie\n",
+    "\n",
+    "*Dlaczego odejmujemy jeden od pełnej liczby elementów we wzorze na próbę?*\n",
+    "\n",
+    "Jest to zabezpiecznie na wypadek 'niedocenienia' wariancji. Gdy odejmujemy jeden od liczby elemenetów we wzorze zwiększamy wariancję.\n",
+    "\n",
+    "patrz po więcej - Josh Stramer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "836b3d88-b662-42bf-bfdf-b294fc99df28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt\n",
+    "import numpy as np\n",
+    "\n",
+    "def wariancja(dane, czy_probka: bool = False): \n",
+    "    srednia = np.mean(dane)\n",
+    "    _wariancja = sum((v - srednia) ** 2 for v in dane)/ (len(dane) - (1 if czy_probka else 0))\n",
+    "    return _wariancja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5675452e-a523-4bd9-a7f0-40ce50d11813",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.95238095238095"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wariancja(dane, czy_probka=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6d92d593-ac89-4831-8a37-217cbee6291b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odchylenie_std(dane, czy_probka: bool=False):\n",
+    "    return sqrt(wariancja(dane, czy_probka))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "85228e56-e8e9-4723-a94d-d95ac5a8a6c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.99523582550223"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odchylenie_std(dane, czy_probka=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ef6f6b4-60b3-4a66-b2e2-182a44930c60",
+   "metadata": {},
+   "source": [
+    "Zwiększenie wariancji i odchylenia standardowego w próbie oznacza, że mamy mniejszą pewność do danych i tym samym zwiększamy zakres wartości."
    ]
   }
  ],
