--- a/3.1 Statystyka opisowa - Rozkłady.ipynb
+++ b/3.1 Statystyka opisowa - Rozkłady.ipynb
@@ -154,9 +154,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d747bd0-2eb5-467a-9de7-4cceb8f9b7ca",
+   "metadata": {},
+   "source": [
+    "Rozkład normalny jest rozkładem ciągły. Oznacz to, że wartości przymują nie tylko stałe wartości (określone w punktach danych), ale przyjmują wartości w pewnych przedziale liczb rzeczywistych.\n",
+    "\n",
+    "Aby uzyskać informację na temat prawdopodobieństwa występienia konkretnej wartości (x), stosujemy funkcję gęstości prawdopobieństwa. Wg powyższego wzoru. Im wyższa wartość PDF, tym większe prawdopodbieństwo wystąpienia danej wartości. \n",
+    "\n",
+    "Jeśli chcemy uzyskać informację na temat prawdopodbieństwa wystąpienia wartości w konkretnych przedziałach wartości, pod krzywą funkcji PDF (czerwoną linią), konieczne jest obliczenia pola obszaru. Aby to zrobić, korzystamy z całki.\n",
+    "\n",
+    "$\n",
+    "P(a <= X <= b) = \\int_{a}^{b} f(x) \\, dx\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad1217d3-0660-4538-8428-31857c84edd5",
+   "metadata": {},
+   "source": [
+    "**Obliczamy pole w przedziale wartości -1 do 1 - całka**\n",
+    "\n",
+    "\n",
+    "\n",
+    "Do obliczenia całki możemy wykorzystać metody numeryczne (metoda traperzów, metoda Simpsona) lub gotowe funkcje do obliczania całek w pythonie. Są one dostępne choćby w bibliotece SciPy.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "173cf5ba-f711-4069-b8b8-f4eb15a8e742",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pole obszaru w zakresie 1 -1 wynosi: 0.682689492137086\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.integrate import quad\n",
+    "from scipy.stats import norm\n",
+    "import numpy as np\n",
+    "\n",
+    "# Definijuemy PDF\n",
+    "def pdf(x):\n",
+    "    mu = 0\n",
+    "    sigma = 1\n",
+    "    return norm.pdf(x, loc=mu, scale=sigma)\n",
+    "\n",
+    "# Obliczanie pola obszaru pod krzywa w przedziale 1 -1\n",
+    "area, _ = quad(pdf, -1, 1)\n",
+    "\n",
+    "print(f'Pole obszaru w zakresie 1 -1 wynosi: {area}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a9ed73a-d63b-4bfb-ad74-689eb47c739b",
+   "metadata": {},
+   "source": [
+    "Obliczanie pola obszaru bez użycia zdefiniowanych funkcji w pythonie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f7e89ad3-6430-47de-8233-cf80ea03ee4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calka dla funkcji x^2 w przedziale -1 1: 0.6666679999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definiowanie funkcji, której całkę chcemy obliczyć\n",
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
+    "# Określenie zakresu wartości\n",
+    "a = -1\n",
+    "b = 1\n",
+    "\n",
+    "# Określenie liczby przedziałów (ilość trapezów)\n",
+    "n = 1000\n",
+    "\n",
+    "# Obliczanie szerokości trapezów\n",
+    "h = (b-a) / n\n",
+    "\n",
+    "# Inicjalizacja sumy\n",
+    "integral = 0\n",
+    "\n",
+    "# Obliczanie całki metodą trapezów\n",
+    "for i in range(1, n):\n",
+    "    x = a + i * h\n",
+    "    integral += f(x)\n",
+    "    \n",
+    "integral = (h / 2) * (f(a) + 2 *integral + f(b))\n",
+    "print(f'Calka dla funkcji x^2 w przedziale -1 1: {integral}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e83432a4-45de-4351-be37-06d7ef7eca50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calka dla funkcji pdf w przedziale -1 1: 0.6847806960987295\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obliczanie całki metodą trapezów\n",
+    "for i in range(1, n):\n",
+    "    x = a + i * h\n",
+    "    integral += pdf(x)\n",
+    "    \n",
+    "integral = (h / 2) * (pdf(a) + 2 *integral + f(b))\n",
+    "print(f'Calka dla funkcji pdf w przedziale -1 1: {integral}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05e3a163-6074-463e-b97c-2eccc5df6f08",
+   "metadata": {},
+   "source": [
+    "Wartość całki dla pola w konkretnym przedziale może się różnić od ilości przedziałów jakie zastosujemy (np. ilości trapezów lub prostokątów), ale również ze względu na metodę jaką zastosujemy. \n",
+    "\n",
+    "Generalnie im więcej przedziałów zastososujemy (prostokątów/trapezów), tym bliższa prawdzie będzie wartość pola obszaru."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e317ee9f-ff1a-4bf7-948f-04b9372d6cb3",
+   "id": "ea8c93db-9a5f-416e-a720-03058b6cc049",
    "metadata": {},
    "outputs": [],
    "source": []
