--- a/3.1 Statystyka opisowa - Rozkłady.ipynb
+++ b/3.1 Statystyka opisowa - Rozkłady.ipynb
@@ -297,9 +297,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0fcb618-b3bc-43b8-bf97-46ab6625d353",
+   "metadata": {},
+   "source": [
+    "### Dystrybuanta (CDF - Cumulative Distribution Function)\n",
+    "\n",
+    "Funkcja służy określeniu prawdopodbieństwa, że wartość zmiennej będzie mniejsza lub równa określonej wartości. Z pomocą CDF jesteśmy w stanie obliczyć pole obszaru do określonej wartości. \n",
+    "\n",
+    "CDF możemy obliczyć w Pythonie z pomocą scipy.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ace0e2c0-3ef0-4268-8d30-f726377f78dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "mu = 29.23 \n",
+    "sigma = 1.37\n",
+    "\n",
+    "x = norm.cdf(29.23, mu, sigma) # Chcemy obliczyc CDF dla wartosci rob\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64e57091-4f40-49df-8c25-e0059db3f692",
+   "metadata": {},
+   "source": [
+    "Jeśli zależy nam na obliczeniu prawdopodbieństwa zakresu środkowego. Możemy obliczyć pole do wartości np. 60 kwantyla. Potem do wartości 40 kwantyla, a następnie odjąć te dwie liczby od siebie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa2eac1a-606c-4482-937f-bde8c8a200b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5283135419737843\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = norm.cdf(30, mu, sigma) - norm.cdf(28, mu, sigma)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18f8a8dc-58b7-4659-b719-c11ffe2f72af",
+   "metadata": {},
+   "source": [
+    "Prawdopodbieństwo w naszych wyliczeniach dla srednia 29.23 i odchylenia standardowego 1.37 przy wartościach 28 i 30, wynosi ok. 53%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d19f0d9d-c50d-44cd-8699-16528f2003ec",
+   "metadata": {},
+   "source": [
+    "### Dystrybuanta odwrotna - funkcja kwantylowa (PPF)\n",
+    "\n",
+    "*Kiedy na podstawie pola pod krzywą chcemy znaleźć odpowiednią wartość x*\n",
+    "\n",
+    "W scipy mamy do tego zdefiniowaną funkcję norm.ppd, która przyjmuje parametry w postaci:\n",
+    "* q - procentowej wartosci, dla której obliczamy kwantyl (od 0 do 1)\n",
+    "* loc - określamy średnią rozkładu (domyślnie 0)\n",
+    "* scale - określamy odchylenie standardowe (domyślnie 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db87df47-602c-4c1c-89f1-323769d4dd49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% wartości w populacji przyjmuje wartość 31.483449468923517 lub mniejszą\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "x = norm.ppf(.95, loc=29.23, scale=1.37)\n",
+    "print(f'95% wartości w populacji przyjmuje wartość {x} lub mniejszą')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e17d456-a385-4559-8f70-4c2e55ed6dd8",
+   "metadata": {},
+   "source": [
+    "### Generowanie liczb losowych zgodnych z rozkładem normalnym\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea8c93db-9a5f-416e-a720-03058b6cc049",
+   "id": "099df577-fd94-43ef-843e-4df4fcf40c0b",
    "metadata": {},
    "outputs": [],
    "source": []
