--- a/4. Algebra liniowa - Powłoka i zależność liniowa.ipynb
+++ b/4. Algebra liniowa - Powłoka i zależność liniowa.ipynb
@@ -306,6 +306,390 @@
     "* ścinanie,\n",
     "* inwersja - wektor i i j zamieniają się miejscami. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa809f89-e2e7-49b2-a378-fd9973873603",
+   "metadata": {},
+   "source": [
+    "## Mnożenie macierzy przez wektor\n",
+    "\n",
+    "Wzór na mnożenie macierzy przez wektor.\n",
+    "Mamy tutaj wektor xy, który mnoży przez wektory bazowe upakowane w macierz.\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{{x_n}}{{y_n}}\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{{a  b}}{{c d }}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{{x}}{{y}}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "I mnożenie:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{{x_n}}{{y_n}}\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{{a \\cdot x + b \\cdot y}}{{c \\cdot x + d \\cdot y}}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ec3ec9-119a-477d-81c0-e2b5f4ad8244",
+   "metadata": {},
+   "source": [
+    "W pythonie używamy do mnożenia macierzy przez wektor biblioteki numpy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "66771f1d-d8b2-44f2-82f5-0a718662cf9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9bcaa522-2fac-4be8-a665-504fe733eee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[3, 1],\n",
+       "        [1, 2]]),\n",
+       " array([2, 4]),\n",
+       " array([10, 10]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baza = np.array([[3,1],\n",
+    "                 [1,2]]) # przykladowe wektory i i j upakowane w macierz\n",
+    "v = np.array([2,4])\n",
+    "\n",
+    "#Przkesztalcenie w wyniku iloczynu macierzy przez wektor\n",
+    "#otrzymujemy nowy wektor v\n",
+    "nowy_v = baza.dot(v)\n",
+    "baza, v, nowy_v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2ce0b12-bd31-4324-aa36-2f8a328b3ec2",
+   "metadata": {},
+   "source": [
+    "Jeśli chcemy utworzyć macierz z dwóch wektorów, to należy pamiętać, aby ją przestransponować. Dzieje się tak, ponieważ numpy interpretuje wiersze i kolumny odwrotnie. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41ad4387-693f-4987-864e-9de073d22a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 4]), array([5, 3]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = np.array([2,4])\n",
+    "j = np.array([5,3])\n",
+    "\n",
+    "i, j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9335de2d-1a0a-42e9-ad9b-70f7f2facca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [5, 3]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([i,j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db17a0d3-af6f-4cee-8a71-7f6fbf5802c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 5],\n",
+       "       [4, 3]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baza = np.array([i,j]).transpose()\n",
+    "baza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "000ad9f5-ce89-4e61-9170-79f99549b65d",
+   "metadata": {},
+   "source": [
+    "## Mnożenie macierzy\n",
+    "\n",
+    "Dzięki mnożeniu macierzy możemy skonsolidować przekstałcenia w jedno. I wtedy dokonać przekształcenia na wybranej przestrzeni wektorowej.\n",
+    "\n",
+    "W pythonie konsolidujemy macierze z pomocą operatora @."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "864904e3-1009-4f07-9b66-73afcbf69ce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_1 = np.array([0,1])\n",
+    "j_1 = np.array([-1,0])\n",
+    "\n",
+    "przeksztalcenie = np.array([i_1, j_1]).T # obrot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "43fd24fe-7036-4be0-9cab-27669c95da3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1]),\n",
+       " array([-1,  0]),\n",
+       " array([[ 0, -1],\n",
+       "        [ 1,  0]]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i_1, j_1, przeksztalcenie "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e76d7d9a-48f7-400b-87b7-8138e2d28853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_2 = np.array([1,0])\n",
+    "j_2 = np.array([1,1])\n",
+    "\n",
+    "przeksztalcenie2 = np.array([i_2, j_2]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7c74a5cf-b3c7-4591-b1f4-6b5252a1b0d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 0]),\n",
+       " array([1, 1]),\n",
+       " array([[1, 1],\n",
+       "        [0, 1]]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i_2, j_2, przeksztalcenie2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "868efd31-d9ce-4245-84d3-17845155cd96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polaczone = przeksztalcenie2 @ przeksztalcenie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b88e4515-61af-4827-89f3-3619336ff14c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polaczona macierz: \n",
+      " [[ 1 -1]\n",
+      " [ 1  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Polaczona macierz: \\n {polaczone}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "78813613-9356-4c8f-8376-f9c242b8694f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# definijuemy wektor i przeksztalcamy\n",
+    "v = np.array([1,2])\n",
+    "print(polaczone.dot(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "103ce1cf-bd31-4573-b126-79f7ee3454f6",
+   "metadata": {},
+   "source": [
+    "Tego samego przekształcenia mmożemy dokonać jeśli wykonamy przekształcenia jedo po drugim. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ebcb42be-f73e-439b-836a-75d638f54352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "obrocony = przeksztalcenie.dot(v)\n",
+    "sciety = przeksztalcenie2.dot(obrocony)\n",
+    "print(sciety)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc11ab3-cf25-46f4-afed-c634ba387484",
+   "metadata": {},
+   "source": [
+    "Warto jednak zwrócić uwagę, że kolejność przekształceń ma znaczenie:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "853472b3-5e76-43e9-97c7-c4bdfaeab131",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2  3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "polaczone_odwrotnie = przeksztalcenie @ przeksztalcenie2\n",
+    "print(polaczone_odwrotnie.dot(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d8987b5f-7c6a-466e-a0bd-03c695022e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2  3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "obrony_odwrotnie = przeksztalcenie2.dot(v)\n",
+    "print(przeksztalcenie.dot(obrony_odwrotnie))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff79c2b2-b4cf-45ea-a8ce-4f55d33c853d",
+   "metadata": {},
+   "source": [
+    "**Co przekształcenie macierzy ma wspólnego z Data Science?**\n",
+    "\n",
+    "Przekształcenia liniowe to esencja pracy na danych w Data Science. W przypadku pracy w wielowymiarowymi zbiorami nie spotykamy raczej sytuacji, gdzie konieczna jest wizuazliacja geometryczna przekształceń. Jednak, aby lepiej zrozumieć, co kryje się za obliczeniami, warto jest zapoznać się z podstawami algebry liniowej, aby lepiej rozumieć koncepcję niektórych pojęć. \n",
+    "\n",
+    "Takich jak np. wyznaczniki. "
+   ]
   }
  ],
  "metadata": {
