--- a/5. Regresja liniowa.ipynb
+++ b/5. Regresja liniowa.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "b07ad6a2-5801-4162-abbd-d3fca00b5741",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "id": "55743f8c-8660-425e-840a-57647bbbad58",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
     "    \n",
     "    # Wykres linii prostej przechodzącej przez punkt na wykresie funkcji\n",
     "    x_line = np.linspace(x_start - 4, x_start + 4, 100)\n",
-    "    y_line = f(x_start) + df(x_start) * (x_line - x_start)\n",
+    "    y_line = f(x_start) + dx_f(x_start) * (x_line - x_start)\n",
     "    plt.plot(x_line, y_line, color='green', linestyle='dashed')\n",
     "    \n",
     "    # Wykres punktu reprezentującego nowy punkt x\n",
@@ -1417,7 +1417,7 @@
     "    plt.grid(True)\n",
     "    \n",
     "    # Przygotowanie do kolejnej iteracji, ale zmniejszenie wartości punktu startowego w trzeciej iteracji\n",
-    "    x_start = x_start - learning_rate * df(x_start)\n",
+    "    x_start = x_start - learning_rate * dx_f(x_start)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
@@ -1433,18 +1433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "898a7bc0-9984-4149-824d-26279e4396e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.999999999999889 4.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L = 0.001 # tempo nauki\n",
     "iteracje = 100000 # liczba iteracji\n",
@@ -1464,7 +1456,87 @@
    "id": "62e92921-8954-46db-a0d8-eecd80284127",
    "metadata": {},
    "source": [
-    "Możemy zauważyć, że zgodnie z tym, co obliczyliśmy z pomocą metody gradientu prostego, minimum paraboli wynosi x=3"
+    "Możemy zauważyć, że zgodnie z tym, co obliczyliśmy z pomocą metody gradientu prostego, minimum paraboli wynosi x=3.\n",
+    "\n",
+    "Przy odpowiednio dużej liczbie iteracji przybliżymy się najniższego punktu w funkcji, gdzie nachylenie będzie wynosić 0. Tempo nauki służy nam do odejmowania większych lub mniejszych wartości od wartości x."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7daa171-125e-43c1-bcc9-a737cea7762d",
+   "metadata": {},
+   "source": [
+    "### Metod gradientu prostego a regresja liniowa\n",
+    "\n",
+    "Jak metodę gradientu prostego wykorzystać do regresji liniowej? W przypadku regresji liniowej próbujemy określić zmienne m i b ($\\beta_0$ i $\\beta_1$), zamiast wartości x. Nie musimy skupiać się w regresji na wartościach x, gdyż są one nam dostarczone w postaci danych treningowych. To, czego szukamy, to współczynniki dla naszych parametrów. \n",
+    "\n",
+    "Aby obliczyć wartości m i b z pomocą gradientu prostego, potrzebujemy pochodnych cząstkowych . Z jakiej funkcji? Skoro próbujemy zminimalizować stratę reprezentowaną przez sumę kwadratów, to szukamy pochodnych funkcji sumy kwadratów względem m i b.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "97223c3a-30e9-4ec0-8fc9-f4ecd09f3afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = list(points.itertuples())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1b49c426-6d26-4dda-9a95-dec0eba967d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# budowanie modelu\n",
+    "m = 0.0 #beta0\n",
+    "b = 0.0 #beta1\n",
+    "\n",
+    "l = .001 # tempo nauki\n",
+    "it = 100000 # iteracje\n",
+    "n = float(len(data)) # liczba elementow x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8fda4ec5-9e91-4abb-b8ae-6e2c396166e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y = 523.9412924152023 x + 141.67273968557018\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradienty prosty\n",
+    "for i in range(it):\n",
+    "    # nachylenie wzgledem m\n",
+    "    d_m = sum(2 * p.bmi * ((m * p.bmi + b) - p.target) for p in data)\n",
+    "    # nachylenie wzgledem b\n",
+    "    d_b = sum(2* ((m * p.bmi + b) - p.target) for p in data)\n",
+    "    # aktualizacja m i b\n",
+    "    m -= l * d_m\n",
+    "    b -= l * d_b\n",
+    "print(f'y = {m} x + {b}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0c2c615-576c-40cd-b097-82020dec3476",
+   "metadata": {},
+   "source": [
+    "Możemy zauważyć, że wartości m i b są bliskie temu, co obliczyliśmy przy równaniu w formie zamkniętej. \n",
+    "\n",
+    "Sprawdźmy, jak regresję liniową metodą gradientu prostego przeprowadzić w sympy.\n",
+    "\n",
+    "### Metoda gradientu prostego w SymPy"
    ]
   }
  ],
